--- a/tanamanSaya.html
+++ b/tanamanSaya.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="tanamanSaya.css" />
+    <link rel="stylesheet" href="css/tanamanSaya.css" />
   </head>
   <body>
     <aside class="sidebar">
@@ -106,11 +106,11 @@
           </div>
         </div>
         <div class="daftar-tanaman">
-          <h2>Daftar Tanaman</h2>
+          <h2>Daftar Tanaman Saya</h2>
           <div class="card-container">
-            <div class="card">FOTO</div>
-            <div class="card">FOTO</div>
-            <div class="card">FOTO</div>
+            <a href="tanaman.php" class="card">FOTO</a>
+            <a href="tanaman.php" class="card">FOTO</a>
+            <a href="tanaman.php" class="card">FOTO</a>
           </div>
         </div>
       </div>
