update login regis landing

--- a/landing_page.html
+++ b/landing_page.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/landing_page.css">
+    <link rel="stylesheet" href="./css/landing_page.css">
 </head>
 <body>
     <div class="container">
         <section class="section1">
             <div class="logo">
-                <img src="../src/logo.png" alt="">
+                <img src="./images/logo.png" alt="">
             </div>
             <div class="konten">
                 <h1>Disini Ada Kata Menarik</h1>
@@ -18,7 +18,7 @@
                 <button>Mulai</button>
             </div>
             <div class="gambar">
-                <img src="../src/pngwing_6.png" alt="">
+                <img src="./images/pngwing_6.png" alt="">
             </div>
         </section>
 
@@ -27,7 +27,7 @@
                 <h1>Disini ada Judul</h1>
             </div>
             <div class="gambar">
-                <img src="../src/pngwing_2.png" alt="">
+                <img src="./images/pngwing_2.png" alt="">
             </div>
             <div class="konten">
                 <div class="card">
@@ -162,7 +162,7 @@
         
             <div class="footer">
                 <div class="footer-column">
-                    <img src="../src/logo.png" alt="">
+                    <img src="./images/logo.png" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus ut purus a suscipit. Nam id hendrerit ipsum. Nulla vitae nisl tortor. Quisque facilisis neque justo, at porta libero lobortis ut. Sed eget mauris quam. Sed lobortis a felis congue condimentum.</p>
                 </div>
                 <div class="footer-column">
