--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Farm Login</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <div class="container">
         <div class="form-container">
             <div class="logo">
-                <img src="../src/logo.png" alt="Re:Farm Logo">
+                <img src="./images/logo.png" alt="Re:Farm Logo">
             </div>
             <p class="intro-text">Ayo masuk ke akunmu dan mulai mencari tahu dunia pertanian</p>
             <form>
