--- a/register.html
+++ b/register.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Farm Registration</title>
-    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="./css/register.css">
 </head>
 <body>
     <div class="container">
         <div class="form-container">
             <div class="logo">
-                <img src="../src/logo.png" alt="Re:Farm Logo">
+                <img src="./images/logo.png" alt="Re:Farm Logo">
             </div>
             <form>
                 <label for="email">Email</label>
