Penambahan Halaman Baru, Update bagian tampilan Tanaman saya, Menghilangkan beberapa bagian

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@
           >
         </li>
         <li>
-          <a href="tanamanSaya.html"
+          <a href="tanamanSaya.php"
             ><span class="material-symbols-outlined"> psychiatry </span>Tanaman Saya</a
           >
         </li>
@@ -60,7 +60,7 @@
       </div>
       <section class="intro-section">
         <div class="intro-text">
-          <p>Yuk kenali dan pelajari dunia pertanian</p>
+          <p>Yuk kenali sekalian pelajari dunia pertanian</p>
           <button>Info Selengkapnya</button>
         </div>
       </section>
