--- a/diskusi.html
+++ b/diskusi.html
@@ -30,7 +30,7 @@
           <span class="material-symbols-outlined"> book </span>Kelas</a>
       </li>
       <li>
-        <a href="tanamanSaya.html">
+        <a href="tanamanSaya.php">
           <span class="material-symbols-outlined"> psychiatry </span>Tanaman Saya</a>
       </li>
       <li>
