--- a/kelas.html
+++ b/kelas.html
@@ -32,7 +32,7 @@
           >
         </li>
         <li>
-          <a href="tanamanSaya.html"
+          <a href="tanamanSaya.php"
             ><span class="material-symbols-outlined"> psychiatry </span>Tanaman Saya</a
           >
         </li>
