--- a/logout.html
+++ b/logout.html
@@ -33,7 +33,7 @@
           >
         </li>
         <li>
-          <a href="tanamanSaya.html"
+          <a href="tanamanSaya.php"
             ><span class="material-symbols-outlined"> Psychiatry </span>Tanaman Saya</a
           >
         </li>
