--- a/dashboard.html
+++ b/dashboard.html
@@ -58,14 +58,17 @@
           <span>Jacob</span>
         </div>
       </div>
+    </header>
+    <img src="images/profil jacob.png" alt= />
+    <section class="profile-info">
+      <h1>Jacob</h1>
       <main class="main-content">
         <header class="profile-header">
           <img src="images/profile.png" alt= />
             <button class="btn">Ubah Foto</button>
             <button class="btn">Ubah Kata Sandi</button>
     </header>
-    <section class="profile-info">
-        <h1>Jacob</h1>
+    
         <div class="tabs">
             <button class="tab active">Biodata Diri</button>
             <button class="tab">Kelas Saya</button>
