--- a/kelas2.html
+++ b/kelas2.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teknik Irigasi dan Pengelolaan Air</title>
+    <title>Re:Farm - Teknik Irigasi dan Pengelolaan Air</title>
     <link rel="stylesheet" href="./css/kelas2.css">
+    <link rel="icon" href="./images/logo.png" type="image/png">
+
 </head>
 <body>
     <div class="container">
