--- a/kelas_utama.html
+++ b/kelas_utama.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Farm - Solusi Irigasi</title>
-    <link rel="icon" href="../src/logo.png" type="image/png">
+    <link rel="icon" href="./images/logo.png" type="image/png">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="./css/kelas_utama.css">
