--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Farm Login</title>
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="icon" href="./images/logo.png" type="image/png">
 </head>
 <body>
     <div class="container">
