--- a/kelas2.html
+++ b/kelas2.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Farm - Teknik Irigasi dan Pengelolaan Air</title>
     <link rel="stylesheet" href="./css/kelas2.css">
-    <link rel="icon" href="./images/logo.png" type="image/png">
-
+    <link rel="icon" href="./images/Logo ReFarm.png" type="image/png">
 </head>
 <body>
     <div class="container">
