--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
                 <input type="password" id="password" name="password" required>
 
                 <div class="buttons">
-                    <button type="submit" class="login-button">Masuk</button>
+                    <a href="./dashboard.html"><button type="submit" class="login-button">Masuk</button></a>
                     <span>Belum punya akun?</span>
-                    <button type="button" class="register-button">Daftar</button>
+                    <a href="./register.html"><button type="button" class="register-button">Daftar</button></a>
                 </div>
             </form>
         </div>
