--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
                     <input type="number" id="year" name="year" min="1900" max="2023" placeholder="YYYY" required>
                 </div>
 
-                <button type="submit">Daftar</button>
+                <a href="./login.html"><button type="submit">Daftar</button></a>
             </form>
         </div>
     </div>
