--- a/landing_page.html
+++ b/landing_page.html
@@ -16,7 +16,7 @@
             <div class="konten">
                 <h1>Disini Ada Kata Menarik</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo aliquam dicta repudiandae, et nesciunt doloremque, molestias nam corporis laudantium labore impedit ipsa quas deserunt non asperiores laborum nostrum nemo!</p>
-                <button>Mulai</button>
+                <a href="./login.html"><button>Mulai</button></a>
             </div>
             <div class="gambar">
                 <img src="./images/pngwing_6.png" alt="">
