menambah profile kurang dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,36 +58,115 @@
           <span>Jacob</span>
         </div>
       </div>
-    </header>
-    <img src="images/profil jacob.png" alt= />
-    <section class="profile-info">
-      <h1>Jacob</h1>
-      <main class="main-content">
-        <header class="profile-header">
-          <img src="images/profile.png" alt= />
-            <button class="btn">Ubah Foto</button>
-            <button class="btn">Ubah Kata Sandi</button>
-    </header>
-    
-        <div class="tabs">
-            <button class="tab active">Biodata Diri</button>
-            <button class="tab">Kelas Saya</button>
-            <button class="tab">Tanaman Saya</button>
+      <section class="intro-section">
+        <div class="intro-text">
+          <p>Yuk kenali dan pelajari dunia pertanian</p>
+          <button>Info Selengkapnya</button>
         </div>
-        <div class="info">
-            <h2>Ubah Biodata</h2>
-            <p>Nama: Jacob <a href="#">Ubah</a></p>
-            <p>Alamat: Solo <a href="#">Ubah</a></p>
-            <p>Tanggal Lahir: 21 Mei 1990 <a href="#">Ubah</a></p>
+      </section>
+      <section class="content-section">
+        <div class="lanjutkan-melihat">
+          <h2>Lanjutkan Melihat</h2>
+          <div class="card-container">
+            <div class="card">
+              <img src="images/pertanian.jpg" alt="Pertanian" />
+              <div class="card-info">
+                <h3>Pertanian Berkelanjutan Ramah Lingkungan</h3>
+                <p>7 Modul</p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 65%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/organik.jpg" alt="Organik" />
+              <div class="card-info">
+                <h3>Dasar-Dasar Pertanian Organik</h3>
+                <p>4 Modul</p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 100%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/hortikultura.jpg" alt="Hortikultura" />
+              <div class="card-info">
+                <h3>Manajemen Tanaman Hortikultura</h3>
+                <p>8 Modul</p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 0%;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="contact-info">
-            <h2>Ubah Kontak</h2>
-            <p>Nomor HP: 08654851245 <a href="#">Ubah</a></p>
-            <p>Email: jacob234@gmail.com <a href="#">Ubah</a></p>
+        <div class="kelas-anda">
+          <h2>Kelas Anda</h2>
+          <div class="card-container">
+            <div class="card">
+              <img src="images/hidroponik.jpg" alt="Hidroponik" />
+              <div class="card-info">
+                <h3>Yuk Kenalan Dengan Hidroponik</h3>
+                <p>2 Modul</p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 25%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/irigasi.jpg" alt="Irigasi" />
+              <div class="card-info">
+                <h3>Membangun Irigasi yang Irit Air</h3>
+                <p>2 Modul</p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 60%;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
-</main>
-</div>
+        <div class="progres-tanaman">
+          <h2>Progres Tanaman Saya</h2>
+          <div class="card-container">
+            <div class="card">
+              <img src="images/cabai.jpg" alt="Cabai" />
+              <div class="card-info">
+                <h3>Cabai</h3>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 10%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/kentang.jpg" alt="Kentang" />
+              <div class="card-info">
+                <h3>Kentang</h3>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 50%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/seledri.jpg" alt="Seledri" />
+              <div class="card-info">
+                <h3>Seledri</h3>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 30%;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="statistik-kamu">
+          <h2>Statistik Kamu</h2>
+          <div class="statistik-content">
+            <span class="material-symbols-outlined"> account_circle </span>
+            <div>
+              <h3>Hai, Jacob</h3>
+              <div class="chart">Chart Placeholder</div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
