--- a/dashboard.html
+++ b/dashboard.html
@@ -58,116 +58,111 @@
           <span>Jacob</span>
         </div>
       </div>
-      <section class="intro-section">
-        <div class="intro-text">
-          <p>Yuk kenali dan pelajari dunia pertanian</p>
-          <button>Info Selengkapnya</button>
+    </header>
+    <section class="intro">
+        <h2>Yuk kenali dan pelajari dunia pertanian</h2>
+        <button>Info Selengkapnya</button>
+    </section>
+    <section class="content">
+        <div class="section-title">
+            <h3>Lanjutkan Melihat</h3>
         </div>
-      </section>
-      <section class="content-section">
-        <div class="lanjutkan-melihat">
-          <h2>Lanjutkan Melihat</h2>
-          <div class="card-container">
-            <div class="card">
-              <img src="images/pertanian.jpg" alt="Pertanian" />
-              <div class="card-info">
-                <h3>Pertanian Berkelanjutan Ramah Lingkungan</h3>
-                <p>7 Modul</p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 65%;"></div>
-                </div>
-              </div>
+        <div class="modules">
+            <div class="module">
+                <img src="images/pertanian.png" alt="Pertanian Berkelanjutan Ramah Lingkungan">
+                <p>Pertanian Berkelanjutan Ramah Lingkungan</p>
+                <p>7 Modul - 65%</p>
             </div>
-            <div class="card">
-              <img src="images/organik.jpg" alt="Organik" />
-              <div class="card-info">
-                <h3>Dasar-Dasar Pertanian Organik</h3>
-                <p>4 Modul</p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 100%;"></div>
-                </div>
-              </div>
+            <div class="module">
+                <img src="images/pertanian organik.png" alt="Dasar-Dasar Pertanian Organik">
+                <p>Dasar-Dasar Pertanian Organik</p>
+                <p>4 Modul - 100%</p>
             </div>
-            <div class="card">
-              <img src="images/hortikultura.jpg" alt="Hortikultura" />
-              <div class="card-info">
-                <h3>Manajemen Tanaman Hortikultura</h3>
-                <p>8 Modul</p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 0%;"></div>
-                </div>
-              </div>
+            <div class="module">
+                <img src="images/tanaman hortikular.png" alt="Manajemen Tanaman Hortikultura">
+                <p>Manajemen Tanaman Hortikultura</p>
+                <p>8 Modul - 0%</p>
             </div>
+        </div>
+    </section>
+    <section class="your-classes">
+        <div class="section-title">
+            <h3>Kelas Anda</h3>
+        </div>
+        <div class="classes">
+            <div class="class">
+                <img src="images/hidroponik.png" alt="Yuk Kenalan Dengan Hidroponik">
+                <p>Yuk Kenalan Dengan Hidroponik</p>
+                <p>Teknik Budidaya Hidroponik - 25%</p>
+            </div>
+            <div class="class">
+                <img src="images/irigasi.png" alt="Membangun Irigasi yang Irit Air">
+                <p>Membangun Irigasi yang Irit Air</p>
+                <p>Teknik Irigasi dan Pengelolaan Air - 60%</p>
+            </div>
+        </div>
+
+    </head>
+    <body>
+        <div class="profile">
+            <img src="images/profil jacob.png" alt="Profile">
+            <h1>Hai, Jacob</h1>
+        </div>
+        <div class="stats">
+            <h2>Statistik Kamu</h2>
+            <canvas id="myChart" width="400" height="400"></canvas>
+        </div>
+        <section class="content">
+          <div class="section-title">
+              <h3>Proggres Tanaman Saya</h3>
           </div>
+          </section>
+        <div class="progress">
+            <div class="item">
+                <img src="images/cabai.png" alt="Cabai">
+                <p>Cabai</p>
+                <div class="progress-bar">
+                    <div style="width: 10%;"></div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/kentang.png" alt="Kentang">
+                <p>Kentang</p>
+                <div class="progress-bar">
+                    <div style="width: 50%;"></div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/seledri.png" alt="Seledri">
+                <p>Seledri</p>
+                <div class="progress-bar">
+                    <div style="width: 30%;"></div>
+                </div>
+            </div>
         </div>
-        <div class="kelas-anda">
-          <h2>Kelas Anda</h2>
-          <div class="card-container">
-            <div class="card">
-              <img src="images/hidroponik.jpg" alt="Hidroponik" />
-              <div class="card-info">
-                <h3>Yuk Kenalan Dengan Hidroponik</h3>
-                <p>2 Modul</p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 25%;"></div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/irigasi.jpg" alt="Irigasi" />
-              <div class="card-info">
-                <h3>Membangun Irigasi yang Irit Air</h3>
-                <p>2 Modul</p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 60%;"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="progres-tanaman">
-          <h2>Progres Tanaman Saya</h2>
-          <div class="card-container">
-            <div class="card">
-              <img src="images/cabai.jpg" alt="Cabai" />
-              <div class="card-info">
-                <h3>Cabai</h3>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 10%;"></div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/kentang.jpg" alt="Kentang" />
-              <div class="card-info">
-                <h3>Kentang</h3>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 50%;"></div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/seledri.jpg" alt="Seledri" />
-              <div class="card-info">
-                <h3>Seledri</h3>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 30%;"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="statistik-kamu">
-          <h2>Statistik Kamu</h2>
-          <div class="statistik-content">
-            <span class="material-symbols-outlined"> account_circle </span>
-            <div>
-              <h3>Hai, Jacob</h3>
-              <div class="chart">Chart Placeholder</div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
-</html>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script>
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const myChart = new Chart(ctx, {
+                type: 'radar',
+                data: {
+                    labels: ['Kategori 1', 'Kategori 1', 'Kategori 1', 'Kategori 1', 'Kategori 1', 'Kategori 1'],
+                    datasets: [{
+                        label: 'Statistik Kamu',
+                        data: [65, 59, 90, 81, 56, 55],
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scale: {
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        </script>
+    </body>
+    </html>
