--- a/dashboard.html
+++ b/dashboard.html
@@ -69,7 +69,7 @@
         </div>
         <div class="modules">
             <div class="module">
-                <img src="images/pertanian.png" alt="Pertanian Berkelanjutan Ramah Lingkungan">
+                <img src="images/pertanian.png" alt="Pertanian Berkelanjutan Ramah Lingkungan" width="100" height="100">
                 <p>Pertanian Berkelanjutan Ramah Lingkungan</p>
                 <p>7 Modul - 65%</p>
             </div>
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js" width="100%" height="200"></script>
         <script>
             const ctx = document.getElementById('myChart').getContext('2d');
             const myChart = new Chart(ctx, {
